// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`model :: Player and Match re-requesting a player retrieves it from the db 1`] = `
Object {
  "result": Object {
    "data": Object {
      "player": Object {
        "id": "account.a36bed11ed214557b0ddef9ef1a56d07",
        "matches": Array [
          Object {
            "id": "9e1650e6-5b67-44f9-ad53-ec8513e5c40d",
          },
          Object {
            "id": "0fc4834f-6946-4223-b0d1-29f8342edb00",
          },
          Object {
            "id": "06a50b2a-b60d-4b21-afbb-29e5245e4043",
          },
          Object {
            "id": "a773e0b0-6f97-4266-be33-83e68369a12c",
          },
          Object {
            "id": "f5c4be0c-c774-4e99-8d2e-cbe1357e1fae",
          },
          Object {
            "id": "01201b99-d222-4e28-be5d-13de3584559a",
          },
          Object {
            "id": "6d8cbc04-111e-47f9-9a1c-89536779e0b2",
          },
        ],
        "name": "BreaK",
      },
    },
  },
  "statusCode": 200,
}
`;

exports[`model :: Player and Match requesting a player on a different shard updates the db 1`] = `
Object {
  "result": Object {
    "data": Object {
      "player": Object {
        "id": "account.a36bed11ed214557b0ddef9ef1a56d07",
        "matches": Array [
          Object {
            "id": "64c8af9f-392d-4da9-9ba3-dd5e4a3efe4d",
          },
          Object {
            "id": "78994989-c4ba-45c7-8481-84e9db85021d",
          },
          Object {
            "id": "0231f85b-3c3d-4426-b509-ddf585420e50",
          },
          Object {
            "id": "c20dcb09-2a9c-4e94-af61-1351f697db87",
          },
          Object {
            "id": "90676f73-5c29-4a60-954e-30d66af295cd",
          },
          Object {
            "id": "e092ffdb-1e90-4cf0-87bc-b1a0bbb7887a",
          },
          Object {
            "id": "0458d885-e343-4a02-964f-17b341a06e92",
          },
          Object {
            "id": "51fedeb3-d3b2-4d68-b651-d6a61ad376f8",
          },
        ],
        "name": "BreaK",
      },
    },
  },
  "statusCode": 200,
}
`;

exports[`model :: Player and Match retrieves new players from the PUBG api 1`] = `
Object {
  "result": Object {
    "data": Object {
      "player": Object {
        "id": "account.a36bed11ed214557b0ddef9ef1a56d07",
        "matches": Array [
          Object {
            "id": "9e1650e6-5b67-44f9-ad53-ec8513e5c40d",
          },
          Object {
            "id": "0fc4834f-6946-4223-b0d1-29f8342edb00",
          },
          Object {
            "id": "06a50b2a-b60d-4b21-afbb-29e5245e4043",
          },
          Object {
            "id": "a773e0b0-6f97-4266-be33-83e68369a12c",
          },
          Object {
            "id": "f5c4be0c-c774-4e99-8d2e-cbe1357e1fae",
          },
          Object {
            "id": "01201b99-d222-4e28-be5d-13de3584559a",
          },
          Object {
            "id": "6d8cbc04-111e-47f9-9a1c-89536779e0b2",
          },
        ],
        "name": "BreaK",
      },
    },
  },
  "statusCode": 200,
}
`;
